[tool.poetry]
name = "connpass-labauto"
version = "0.1.0"
description = ""
authors = ["iTakeshi <itakeshi.net@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
